--- a/2025_FDM_Biol-116.md
+++ b/2025_FDM_Biol-116.md
@@ -33,7 +33,7 @@ comment:  Einführung in das Thema Forschungsdatenmanagement im Rahmen der [Vera
 
 # Disclaimer
 
->TinyURL zu dieser Präsentation: 
+>TinyURL zu dieser Präsentation: https://tinyurl.com/biol116-2025
 
 >**Disclaimer**: Please note that you are leaving the CAU pages once you open this presentation in your browser. This presentation includes links to other third party websites and services. When you click on these links you will leave this presentation and will be redirected to the respective another sites. These sites are not under our control.
 >
@@ -42,7 +42,7 @@ comment:  Einführung in das Thema Forschungsdatenmanagement im Rahmen der [Vera
 > To see this document as an interactive LiaScript rendered version, click on the
 > following link/badge:
 >
-> [![LiaScript](https://raw.githubusercontent.com/LiaScript/LiaScript/master/badges/course.svg)](https://liascript.github.io/course/?https://raw.githubusercontent.com/BrittaP/eLBB4RDM/refs/heads/main/2025_FDM_Biol-116.md)
+> [![LiaScript](https://raw.githubusercontent.com/LiaScript/LiaScript/master/badges/course.svg)](https://liascript.github.io/course/?https://raw.githubusercontent.com/RDM4CAU/bio116/refs/heads/main/2025_FDM_Biol-116.md#1)
 >
 > If you need help, feel free to ask us any questions:
 >
