--- a/2026_FDM_Biol-116.md
+++ b/2026_FDM_Biol-116.md
@@ -10,7 +10,22 @@ link: https://raw.githubusercontent.com/RDM4CAU/Intro-to-RDM/refs/heads/main/cau
 
 icon:     images/Logo_cau-norm-de-lilagrey-rgb-0720_2022.png
 
-comment:  Einführung in das Thema Forschungsdatenmanagement im Rahmen der [Veranstaltung biol116 - Kommunikation in der Wissenschaft](https://univis.uni-kiel.de/formbot/dsc_3Danew_2Ftlecture_26tdir_3Dmathe_2Fbiolog_2Fbachel_5F10_2Fgrunds_1_2Fbiol11_26lang_3Den_26ref_3Dtlecture)
+comment:  Einführung in das Thema Forschungsdatenmanagement im Rahmen der Veranstaltung biol116 - Kommunikation in der Wissenschaft, Prof. Olivia Roth
+
+@style
+
+
+.lia-slide__container {
+    background-image: url("https://raw.githubusercontent.com/RDM4CAU/LZ4FDM/main/images/CAU-streifen.png");
+    background-size: 3%;
+    background-repeat: no-repeat;
+    background-position: right;
+    opacity: 1;
+
+    position: relative; 
+}
+
+@end
 
 -->
 
@@ -31,7 +46,7 @@ comment:  Einführung in das Thema Forschungsdatenmanagement im Rahmen der [Vera
 
 # Disclaimer
 
->TinyURL zu dieser Präsentation: https://tinyurl.com/biol116-2025
+>TinyURL zu dieser Präsentation: 
 
 >**Disclaimer**: Please note that you are leaving the CAU pages once you open this presentation in your browser. This presentation includes links to other third party websites and services. When you click on these links you will leave this presentation and will be redirected to the respective another sites. These sites are not under our control.
 >
@@ -57,7 +72,7 @@ comment:  Einführung in das Thema Forschungsdatenmanagement im Rahmen der [Vera
 {{0-1}}
 ********************************************************************************
 
-<!-- style="width: 80%; float:left" -->
+<!-- style="width: 100%" -->
 >**Lassen Sie uns kurz gemeinsam sammeln!**
 >
 >Was sind Forschungsdaten?
@@ -86,18 +101,22 @@ Die DFG schreibt hierzu:
 
 > „Zu Forschungsdaten zählen u. a. Messdaten, Laborwerte, audiovisuelle Informationen, Texte, Surveydaten oder Beobachtungsdaten, methodische Testverfahren sowie Fragebögen. Korpora und Simulationen können ebenfalls zentrale Ergebnisse wissenschaftlicher Forschung darstellen und werden daher ebenfalls unter den Begriff Forschungsdaten gefasst. Da Forschungsdaten in einigen Fachbereichen auf der Analyse von Objekten basieren (z. B. Gewebe-, Material-, Gesteins-, Wasser- und Bodenproben, Prüfkörper, Installationen, Artefakte und Kunstgegenstände), muss der Umgang mit diesen ebenso sorgfältig sein und eine fachlich adäquate Nachnutzungsmöglichkeit, wann immer sinnvoll und möglich, mitgedacht werden. Ähnliches gilt, wenn Software für die Entstehung oder Verarbeitung von Forschungsdaten erforderlich ist.“
 >
-> (**DFG 2021**)
+> [DFG - Umgang mit Forschungsdaten](https://www.dfg.de/de/grundlagen-themen/grundlagen-und-prinzipien-der-foerderung/forschungsdaten)
 
 ********************************************************************************
 
 {{3-4}}
 ********************************************************************************
 
-Etwas weniger kompliziert definierte das PrePARe Projekt der Camebridge University den Begriff Forschungsadaten:
+Etwas weniger kompliziert:
 
-> “Any any information you use in your research.”
+> Es existiert Keine feste Definition des Begriffes "Forschungsdaten"
 >
-> (**University of Camebridge PrePARe Project**)
+>- **Allgemein**:
+>
+>  - Forschungsdaten sind „alle (digitalen) Daten, die während des Forschungsprozesses **entstehen**, **gesammelt**, oder **verarbeitet** werden sowie deren **Ergebnisse** sind“.
+>
+> [Biernacka et al. (2023) .Train-the-Trainer-Konzept zum Thema Forschungsdatenmanagement.](https://doi.org/10.5281/zenodo.10122153)
 
 ********************************************************************************
 
@@ -140,25 +159,38 @@ onclick="alert('Let´s work together!');"
 
 ********************************************************************************
 
-{{1-3}}
+{{1-2}}
 ********************************************************************************
-<!-- style="max-width: 80%; float:left" -->
-> Forschungsdatenmanagement (FDM) umfasst alle Prozesse der **Transformation**, **Selektion** und **Speicherung** von Forschungsdaten mit dem gemeinsamen **Ziel**, diese *langfristig* und *personenunabhängig* **zugänglich**, **nachnutzbar** und **nachprüfbar** zu halten.
->
->-- www.forschungsdaten.info
+Forschungsdatenmanagement (FDM) …
+---
+
+… umfasst alle Aktivitäten, die mit der
+
+- Aufbereitung,
+- Speicherung,
+- Archivierung und
+- Veröffentlichung
+
+von Forschungsdaten verbunden sind.
+
+… begleitet den Forschungsprozess von den ersten Planungen bis zur Archivierung, Nachnutzung oder Löschung der Daten.[^1]  
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+---
+
+[^1] [Biernacka et al. (2023) .Train-the-Trainer-Konzept zum Thema Forschungsdatenmanagement.](https://doi.org/10.5281/zenodo.10122153)
 
 
-********************************************************************************
-{{2-3}}
-********************************************************************************
-<!-- style="max-width: 80%; float:left" -->
->Forschungsdatenmanagement umfasst alle Maßnahmen und Prozesse, die notwendig sind, um sicherzustellen, dass Forschungsdaten während des gesamten Forschungsdatenlebenszyklus – von der Planung und Erhebung über die Analyse bis hin zur Archivierung und Langzeitbewahrung – effizient und nachhaltig gehandhabt werden.
->
-> -- OpenAI. (2025). ChatGPT (Version 4)
 
 ********************************************************************************
 
-{{3}}
+{{2}}
 ********************************************************************************
 
 Zentrale Aspekte des FDM
@@ -223,11 +255,11 @@ Zentrale Aspekte des FDM
 
 {{6-7}}
 ****************
-Daten sollen so strukturiert und beschrieben werden, dass sie leicht auffindbar sind. 
+Daten sollen so strukturiert und beschrieben werden, dass sie leicht auffindbar sind.
 
-Dazu gehört die Verwendung eindeutiger digitaler Identifier (z. B. DOI, ORCID) und eine klare, vollständige Dokumentation (Metadaten).
+Dazu gehört die strukturierte Benennung von Dateien, die Verwendung eindeutiger digitaler Identifier (z. B. DOI, ORCID) und eine klare, vollständige Dokumentation (Metadaten).
 
-Metadaten und Daten sollten sowohl für Menschen als auch für Computer leicht zu finden sein. 
+Metadaten und Daten sollten sowohl für Menschen als auch für Computer leicht zu finden sein.
 
 Maschinenlesbare Metadaten sind für das automatische Auffinden von Datensätzen und Diensten unerlässlich und daher ein wesentlicher Bestandteil FAIRer Daten.
 
@@ -288,8 +320,6 @@ Fragen zum Datenmanagement ergeben sich in allen Phasen des Forschungsprozesses:
 
 ************
 
-
-
 <div style="page-break-after: always;"></div>
 
 {{1-2}}
@@ -302,29 +332,25 @@ Planung
 **Findable**
 
 - Nach welchem Schema benenne ich meine Dateien, damit sie im Projektverlauf möglichst gut zu finden sind?
-- Wie plane ich die Daten nach Projektende auffindbar zu machen?
 - ...
 
 **Accessible**:
 
-- Welche Speicherorte werden verwendet? Fallen Kosten an?
-- Wer soll mit welchen Rechten Zugang zu den Daten haben? 
+- Wer soll mit welchen Rechten Zugang zu den Daten haben?
 - ...
 
 **Interoperable**:
 
-- Existieren Standards?
-- Mit welchen Dateiformaten und Tools soll gearbeitet werden? 
-- In welchen Dateiformaten soll veröffentlicht werden?
+- Mit welchen Dateiformaten und Tools soll gearbeitet werden?
+- In welchen Dateiformaten soll veröffentlicht oder archiviert werden?
 - ...
 
-**Reusable**: 
+**Reusable**:
 
-- Wem gehören die Daten, die ich erhebe?
+- Unter welchen Bedingungen darf ich die Daten nachnutzen?
 
-- Welche Informationen müssen in den Metadaten enthalten sein, damit die Daten von anderen Forscher:innen nachvollziehbar und wiederverwendbar sind?
+- Welche Informationen oder Metadaten brauche ich, um die Daten nutzen zu können?
 - ...
-
 
 ********************************************************************************
 
@@ -354,7 +380,6 @@ Erhebung und Analyse
 **Reusable**
 
 - Welche Ansätze werden verfolgt, um die Daten kontinuierlich nachvollziehbar zu dokumentieren?
-- Welche Maßnahmen werden getroffen, um eine hohe Qualität der Daten zu gewährleisten?
 
 
 ********************************************************************************
@@ -386,8 +411,6 @@ Archivierung & Veröffentlichung
 **Reusable**
 
 - Bestehen rechtlichen Besonderheiten im Zusammenhang mit dem Umgang mit den Daten?
-* Sind Auswirkungen oder Einschränkungen in Bezug auf die spätere Veröffentlichung bzw. Zugänglichkeit zu erwarten?
-* Auf welche Weise werden nutzungs- und urheberrechtliche Aspekte sowie Eigentumsfragen berücksichtigt?
 * Existieren wichtige wissenschaftliche Kodizes bzw. fachliche Normen, die Berücksichtigung finden sollten?
 
 ---
@@ -443,7 +466,8 @@ Nachnutzung
 
 {{0-1}}
 *************************
-> **Verzeichnisse anlegen**
+Verzeichnisse anlegen
+---
 
 <!-- style="width: 30%; float:right" -->
 ![](https://github.com/BrittaP/eLBB4RDM/blob/main/images/Ordnung_und_Struktur_1296x1128.png?raw=true)
@@ -452,107 +476,97 @@ Entwickeln Sie eine logische Struktur mit klaren Hauptkategorien für Dateiordne
 
 - Daten: Alle erhobenen und verarbeiteten Daten
     
-- Dokumente: Berichte, Protokolle
+- Arbeitsdokumente: Berichte, Protokolle, Notizen
 
 - Literatur: Fachartikel, Bücher, Zitationen
 
-- Ergebnisse: Analysen, Auswertungen, Diagramme
+- Ergebnisse: Abbildungen, Diagramme, Karten
 
-- Projektdokumentation: Projektpläne, Zeitpläne, Finanzdokumente
+- Bachelorarbeit: Textdateien Kapitelweise
 
 \
 
-Unterordner können z. B. nach Phasen angelegt werden: 
+Unterordner können z. B. Analysemethoden oder nach zeitlichen Phasen angelegt werden:
 
 - Daten
 
   - Rohdaten
   
-  - Verarbeitete Daten
+  - AnalyseX-Daten
+
+  - AnalyseY-Daten
   
   - Publikationsdaten
 
-\
+<br>
+
 - Legen Sie möglichst nicht mehr als drei Ordnerebenen an.
 
 *************************
 
 {{1-2}}
 *************************
->**Dateibenennungskonventionen entwickeln** 
+Dateibenennungskonventionen entwickeln 
+---
 
-- Verwenden Sie klare, konsistente Namen für Dateien 
+>- Klare, konsistente Namen für Dateien
+>- Dateinamen kurz, aber präzise
 
-- Halten Sie die Dateinamen kurz, aber präzise
+>- **Muster für Bestandteile der Dateinamen entwickeln!**
+>
+>  - z. B. Projektname-Typ-Datum-Version.suffix -> z. B. „ProjektXY-RTPCR-Art-20250120-v1.csv“
+>
+>  - Muster einhalten!
+>  - Abkürzungen Dokumentieren (z. B. RTPCR = Realtime-PCR)
 
-- Entwickeln Sie ein einheitliches Muster für die Namensbestandteile der Dateinamen, z. B. Projektname-Typ-Datum-Version.suffix -> z. B. „ForschungXYZ-CO2Messung-20250120-v1.csv“
+>- [***ISO 8601***](https://en.wikipedia.org/wiki/ISO_8601) für Daten und Zeiten
+>
+>   - Datum: JJJJ-MM-TT
 
-- Befolgen Sie [***ISO 8601***](https://en.wikipedia.org/wiki/ISO_8601) für Daten und Zeiten
+>- Viele Proben? Führende Nullen verwenden (z. B. 001, 002, ...)
 
-  - Datum und Uhrzeit, z.B. JJJJMMTThhmmss±hhmm
+>- **Versionen?**
+>
+>  - Vermeiden Sie Anhänge, wie \_final, \_fertig, \_inArbeit u. ä.
+>
+>  - Verwenden Sie das [***semantische Versionsschema***](https://semverdoc.org/) (Major-Minor-Patch), z. B. v1 v2-0
 
-  - Datum, z. B. JJJJ-MM-TT
-
-- Nutzen Sie führende Nullen (z. B. 0001, 0002, ...)
-
-- Versionen? 
-
-  - Vermeiden Sie Anhänge, wie \_final, \_fertig, \_inArbeit u. ä.
-
-  - Verwenden Sie das [***semantische Versionsschema***](https://semverdoc.org/) (Major.Minor.Patch), z. B. 2.0.0
-
-- Vermeiden Sie Leerzeichen und sämtliche Sonderzeichen "🦄". 
-
-  - einzig erlaubte Sonderzeichen sind Unterstrich (_) und Bindestrich (-)
+>- **Vermeiden Sie Leerzeichen und sämtliche Sonderzeichen "🦄".** 
+>
+>  - einzig erlaubte Sonderzeichen sind Unterstrich (_) und Bindestrich (-)
 
 *************************
 
 {{2}}
 *************************
 
-- ***Dokumentieren*** Sie in einer README
+- ***Dokumentieren*** Sie in einer sogenannten ***README-Datei***
 
   - Ihre Ordnerstruktur
   
-  - Benennungskonventionen 
+  - Benennungskonventionen
   
   - verwendete Abkürzungen
 
   - Versionierungsschema
 
+Lesen Sie README-Dateien, wenn Sie in gemeinsam genutzten Speicherorten welche finden :-)
+
 *************************
 
 <div style="page-break-after: always;"></div>
 
-### Beispiele
+# Beispiel Benennungskonvention
 
 {{0-1}}
-********************************************************************************
-
-**Beispiel Ordnerstruktur**
----
-
-<center>
-  <img src="images\Abb_OrdnerstrukturArchproject_2022_bp.png" alt="example folder hirarchy">
-    <sub style="text-align: right;">Provided by Oliver Nakoinz</sub>
-</center>
-
-********************************************************************************
-
-{{1-2}}
 ****************************************
-
-<!-- style="font-size: 30px;" -->
-**Beispiel für eine Benennungskonvention:**
-
-
 <!-- style="font-size: 30px;" -->
 >Project name\_Approach\_Location\_Person-ID_Date.[Format-Suffix]
 >
->Rebel-Hunting\_Interview\_DS-1-Orbital-Battle-Station\_Organa\_2001-05-12.mp4
+>Rebel-Hunting\_Interview\_DS-1\_Organa\_2001-05-12.mp4
 ****************************************
 
-{{2}}
+{{1}}
 ****************************************
 
 <!-- style="font-size: 30px;" -->
@@ -565,70 +579,9 @@ Datum nicht nach ISO 8601. ACHTUNG!🚫
 
 <div style="page-break-after: always;"></div>
 
-### Versionieren 
-
-{{0-1}}
-********************************************************************************
-
-<center>
-![](images\versioning-geek-and-poke.jpg)
-</center>
-
-********************************************************************************
-
-{{1-2}}
-********************************************************************************
-
-- Versionen in separaten Dateien speichern
-
-  - Semantische Versionierung (Major.Minor.Patch), z.B.,
-
-    - __0.1.0__ (eine Beta-Version)
-
-    - __1.0.0__ (eine Release-Version)
-
-    - __1.0.1__ (ein Release mit leichten Korrekturen)
-
-  - kann im Dateinamen enthalten sein
-
-  - Definieren Sie, was Sie als "Release" oder "leichte Korrektur" betrachten
-
-- Dokumentieren Sie Ihr Versionsschema und dokumentieren Sie ständig Ihre Änderungen
-
-  - README.md
-
-  - Versionskontrolltabelle
-
-- Arbeiten Sie in einem Team? Viele Änderungen? Verwenden Sie ein verteiltes Versionskontrollsystem!
-
-  - Git
-
-  - GitLab, GitHub
-
-
-********************************************************************************
-
-<div style="page-break-after: always;"></div>
-
-{{2-3}}
-********************************************************************************
-
-**Wie eine Versionskontrolltabelle aussehen könnte**
-
-| Versionsnr.  | Changes                      | Date      | changed by |
-| :----------  | :----------                      | ---        | ---               |
-| 1.0          | Release                         | 2016-11-2  | KL                |
-| 1.1          | Erased spelling mistakes  | 2016-11-20 | KL                |
-| 1.2          | Changed layout            | 2017-02-20 | GN                |
-| 2.0          | Add new chapter (3.1.) | 2017-02-20 | GN                |
-
-********************************************************************************
-
-<div style="page-break-after: always;"></div>
-
 ### Beispiel README
 
->Ordnerstrukturen und Namenskonventionen sollten in einer **README-Datei** dokumentiert werden, die als einfache Textdatei in der ersten hierarchischen Ebene der gewählten Ordnerstruktur abgelegt werden sollte. 
+>Ordnerstrukturen und Namenskonventionen sollten in einer **README-Datei** dokumentiert werden, die als einfache Textdatei in der ersten hierarchischen Ebene der gewählten Ordnerstruktur abgelegt werden sollte.
 
 {{1}}
 ********************************************************************************
@@ -703,7 +656,7 @@ All files will be stored on my computer and backed up [daily,weekly,...] to CAU 
 
 | Versionsnr.  | Changes                | Date       | changed by        |
 | :----------  | :----------            | ---        | ---               |
-| 0.1          | setup working folders  | 2023-09-02 | me                |
+| 0-1          | setup working folders  | 2023-09-02 | me                |
 
 
 ```
@@ -717,18 +670,6 @@ All files will be stored on my computer and backed up [daily,weekly,...] to CAU 
 https://tinyurl.com/dateibenennung
 
 ![Bild](images/Comic_Dateibenennung_v2_2022-04-14_CM_web.jpg "Illustration: Cleo Michelsen")
-
-<div style="page-break-after: always;"></div>
-
-### Dokumentieren 📔
-
-- Dokumentation ist entscheidend, um die Qualität, Nachvollziehbarkeit und Reproduzierbarkeit von Forschungsdaten sicherzustellen.
-
-- Wichtige Vokabel: **Metadaten**
-
-- Eine Dokumentation umfasst alle Informationen, die notwendig sind, um die Daten im Kontext der Forschung korrekt zu verstehen, zu interpretieren und langfristig nutzbar zu machen.
-
-- Sie selbst sind wahrscheinlich die erste Person, die die eigenen Daten nachnutzen möchte. Wenn Sie Ihre Daten so dokumentieren, dass auch andere diese Daten nachvollziehen und nutzen können, ist es sehr wahrscheinlich, dass Sie Ihre Daten und Ihre Prozesse auch zukünftig verstehen werden!
 
 <div style="page-break-after: always;"></div>
 
@@ -807,11 +748,11 @@ Einige mögliche Punkte
 
 # opendata@uni-kiel.de
 
-Für die Publikation von Daten, für die es keinen fachspezifischen Speicherort gibt, kann das Open-Data-Portal der CAU genutzt werden.
-
 Sie schreiben bald eine Bachelorarbeit.
 
 Denken Sie jetzt schon daran, wie Sie Ihre Daten nachhaltig aufbewahren können: https://opendata.uni-kiel.de
+
+>Auf dem Testsytem (nur CAU-intern erreichbar) kann das Publizieren ausprobiert werden: https://datenrepositorium00.rz.uni-kiel.de
 
 ![Bild](images/open-data-kiel.png)
 
@@ -821,110 +762,11 @@ Denken Sie jetzt schon daran, wie Sie Ihre Daten nachhaltig aufbewahren können:
 
 >![Bild](images/kurzberichte.png) <!-- width="150px" align="right" -->
 >
-> **Kurzer Ausblick auf das nächste Vorlesungsthema**
+> **Kurzer Ausblick in ein anderes Vorlesungsthema**
 >
->* Gutes Forschungsdatenmanagement gilt als ein Teil **~~guter wissenschaftlicher Praxis~~ (GWP)**. Inwiefern kann FDM zu GWP beitragen?
-
-{{1-2}}
-********************************************************************************
->**Gutes Forschungsdatenmanagement trägt bei zu...**
+>* Gutes Forschungsdatenmanagement gilt als ein Teil **~~guter wissenschaftlicher Praxis~~ (GWP)**.
 >
-> - Reproduzierbarkeit von Ergebnissen (GWP)
-> - Rückverfolgbarkeit und Transparenz der Forschung (GWP)
-> - Wissenserhalt – Daten sollen unabhängig von einzelnen Menschen, Projekten oder Institutionen zugänglich sein (GWP)
->- gute Auffindbarkeit von Daten, z. B. durch aussagekräftige Benennung und beschreibende Metadaten
-> - Erleichterung der Zusammenarbeit
-> - Vorbeugung von Datenverlusten
-> - Kostenersparnis, z. B. durch Nachnutzung statt neuer Erhebung
-> - Transfer der Daten in zukünftige Projekte
-> - Erhöhung der Sichtbarkeit der eigenen Arbeit durch Forschungsdatenzitation
-> - Erfüllung von Auflagen der Drittmittelgeber
-> - ….
-
-********************************************************************************
-
-<div style="page-break-after: always;"></div>
-
-# Wichtige Player
-
-{{0-2}}
-********************************************************************************
-
-**Forschungsförderer** legen zunehmend Wert auf ein gutes Forschungsdatenmanagement und fordern bei Forschungsanträgen z. B. den Nachweis von Planungen (DMPs) zum Umgang mit Daten.
-
-********************************************************************************
-
-{{1-2}}
-********************************************************************************
-
----
-
-![Bild](images/dfg_logo_schriftzug_blau.jpg) <!-- width="100px" align="right" -->
-
-**Deutsche Forschungsgemeinschaft (DFG)**:
-
-Als größter Forschungsförderer in Deutschland hat sich die **DFG** mit dem Thema Forschungsdatenmanagement auseinandergesetzt. 2015 wurden die [DFG-Leitlinien zum Umgang mit Forschungsdaten](https://www.dfg.de/foerderung/grundlagen_rahmenbedingungen/forschungsdaten/) veröffentlicht und ist durch fachspezifische Empfehlungen ergänzt. Der neue [Kodex "Leitlinien zur Sicherung guter wissenschaftlicher Praxis"](https://wissenschaftliche-integritaet.de/kodex/) geht an vielen Stellen auf ***FAIR & Open Data*** ein.
-
----
-
-<div style="page-break-after: always;"></div>
-
-![Bild](images/BMBF-logo.png) <!-- width="150px" align="right" -->
-
-Das **Bundesministerium für Bildung und Forschung (BMBF)**:
-
-Als einer der Förderer und Initiatoren der Nationalen Forschungsdateninfrastruktur verlangt das BMBF in den Richtlinien zur Förderung eine Datenmanagementplanung, wobei die Vorlagen hierzu variieren.
-
----
-
-<div style="page-break-after: always;"></div>
-
-![Bild](images/European-Commission-logo.png) <!-- width="150px" align="right" -->
-
-**Europäische Kommission (EC):**
-
-Im Rahmenprogramm Horizon 2020 wurden erstmals die Anforderungen an das Forschungsdatenmanagement im Open Data Pilot formuliert. Seit 2017 ist die Beteiligung am Open Data Pilot und somit das Datenmanagement nach den FAIR-Data-Prinzipien (findable, accessible, interoperable and reusable) mit einer mehrstufigen Datenmanagementplanung und der Veröffentlichung unter Open Access der Standard. Das gilt auch für das aktuelle [Rahmenprogramm Horizon Europe](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/guidance/programme-guide_horizon_en.pdf).
-
-********************************************************************************
-
-{{2-3}}
-********************************************************************************
-
----
-
-![Bild](images/nfdi_logo.png) <!-- width="150px" align="right" -->
-
-**Nationale Forschungsdateninfrastruktur (NFDIs)**:
-
-Finanziert durch Bund und Länder entsteht derzeit ein bundesweit verteiltes Kompetenz- und Infrastrukturnetzwerk, das die Bereitstellung und Erschließung von Forschungsdaten für die Wissenschaft sicherstellen soll.
-
-[**NFDI e. V.**](https://www.nfdi.de/)
-
-![Bild](images/screenshot_nfdi.jpg)
-
-********************************************************************************
-
-<div style="page-break-after: always;"></div>
-
-{{3-4}}
-********************************************************************************
-
-**Für Ihren Fachbereich**: [**Dataplant**](https://www.nfdi4plants.de/)
-
-![Bild](images/screenshot_dataplant.jpg)
-
-********************************************************************************
-
-<div style="page-break-after: always;"></div>
-
-{{4}}
-********************************************************************************
-
-[**NFDI4Biodiversity**](https://www.nfdi4biodiversity.org/de/)
-
-![Bild](images/screenshot_nfdi4biodiversity.jpg)
-
-********************************************************************************
+> Was denken Sie? Inwiefern kann FDM zu GWP beitragen?
 
 <div style="page-break-after: always;"></div>
 
@@ -939,8 +781,6 @@ Finanziert durch Bund und Länder entsteht derzeit ein bundesweit verteiltes Kom
 > * Data Collector
 >
 > Hierfür sind gute Kenntnisse und Fähigkeiten im Umgang mit digitalen Daten erforderlich, die über rein fachliche Fragestellungen hinaus gehen. Momentan fehlt in den meisten Fachbereichen eine formale Ausbildung in diesem Bereich.
->
->Ein Beispiel für eine entsprechende Stellenausschreibung finden Sie hier: https://recruitingapp-5636.de.umantis.com/Vacancies/418/Description/31
 
 <div style="page-break-after: always;"></div>
 
@@ -953,3 +793,15 @@ Mehr zum FDM an der CAU finden Sie hier:
 https://www.fdm.uni-kiel.de/de
 
 <div style="page-break-after: always;"></div>
+
+# Quellen
+
+Biernacka, Katarzyna, Buchholz, Petra, Danker, Sarah Ann, Dolzycka, Dominika, Engelhardt, Claudia, Helbig, Kerstin, Jacob, Juliane, Neumann, Janna, Odebrecht, Carolin, Petersen, Britta, Slowig, Benjamin, Trautwein-Bruns, Ute, Wiljes, Cord, & Wuttke, Ulrike. (2021). Train-the-Trainer-Konzept zum Thema Forschungsdatenmanagement (Version 4). Zenodo.; https://doi.org/10.5281/zenodo.5773203
+
+DFG - Umgang mit Forschungsdaten (2025), online unter https://www.dfg.de/de/grundlagen-themen/grundlagen-und-prinzipien-der-foerderung/forschungsdaten, letzer Zugriff 2026-01-18
+
+Jackenkroll, Martina (2021): Wie organisiere ich meine Dateien und Ordner? Einführung in das Forschungsdatenmanagement; online unter https://www.tu-chemnitz.de//ub/dokumente/open_access/fdm/2021_02_26_ZfwN_FDM.pdf
+
+Petersen, Britta, Engelhardt, Claudia, Hörner, Tanja, Jacob, Juliane, Kvetnaya, Tatiana, Mühlichen, Andreas, Schranzhofer, Hermann, Schulz, Sandra, Slowig, Benjamin, Trautwein-Bruns, Ute, Voigt, Anne, & Wiljes, Cord. (2022). Lernzielmatrix zum Themenbereich Forschungsdatenmanagement (FDM) für die Zielgruppen Studierende, PhDs und Data Stewards (Version 1). Zenodo. https://doi.org/10.5281/zenodo.7034478
+
+Wilkinson, M., Dumontier, M., Aalbersberg, I. et al. The FAIR Guiding Principles for scientific data management and stewardship. Sci Data 3, 160018 (2016). https://doi.org/10.1038/sdata.2016.18 
